# hackernews-daily-digest

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: daily-digest.yml  pages.yml
docs/: example-digest.html  index.html
src/: __init__.py  article_fetcher.py  config.py  email_renderer.py  hn_client.py  list_models.py  mailer.py  schedule.py  summarizer.py
